--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,10 @@
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-svg": "^15.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
