--- a/app/package.json
+++ b/app/package.json
@@ -17,8 +17,11 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-awesome-slider": "^2.9.0",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
     "react-native-svg": "^15.10.1"
   },
   "devDependencies": {
