--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,8 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
-    "react-native-svg": "^15.10.1"
+    "react-native-svg": "^15.10.1",
+    "react-native-switch": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
