--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.10.1",
     "react-native-switch": "^1.5.1"
   },
