--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-awesome-slider": "^2.9.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
