--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.8.0",
-    "react-native-switch": "^1.5.1"
+    "react-native-switch": "^1.5.1",
+    "source-map": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
