--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.33",
     "expo-status-bar": "~2.0.1",
@@ -27,9 +27,12 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.8.0",
     "react-native-switch": "^1.5.1",
+    "react-native-vector-icons": "^10.2.0",
     "source-map": "^0.7.4"
   },
   "devDependencies": {
