--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,8 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.8.0",
     "react-native-switch": "^1.5.1",
-    "source-map": "^0.7.4"
+    "source-map": "^0.7.4",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
