--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,5 +1,8 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+#token
+LbQZfzY8CBYXf8Oi4Lqphrsrt3uGDIUEaD1WVBw8
+
 # dependencies
 node_modules/
 
@@ -34,3 +37,4 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
