--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.33",
     "expo-av": "^15.0.2",
+    "expo-speech": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
